i should commit more often

--- a/src/main/resources/assets/visibleconflicts/lang/en_us.json
+++ b/src/main/resources/assets/visibleconflicts/lang/en_us.json
@@ -1,2 +1,4 @@
 {
+  "title.visibleconflicts.gui.conflicting_mods_header": "There are mods installed that conflict!",
+  "title.visibleconflicts.gui.conflicting_mods_message": "There are mods installed that conflict with eachother. This can range from minor issues to major incompatibilities. See the list below for details."
 }
